@@ -926,4 +926,6 @@ extern unsigned riscv_stack_boundary;
 
 extern void riscv_remove_unneeded_save_restore_calls (void);
 
+#define HARD_REGNO_RENAME_OK(FROM, TO) riscv_hard_regno_rename_ok (FROM, TO)
+
 #endif /* ! GCC_RISCV_H */
